--- a/gatsby-minimal-zenlify-starter/content/posts/dark-arts/index.mdx
+++ b/gatsby-minimal-zenlify-starter/content/posts/dark-arts/index.mdx
@@ -5,7 +5,7 @@ description: Defence Against the Dark Arts (abbreviated as DADA) is a subject ta
 tags:
   - Tutorial
   - Dark Arts
-slug: bring-arts
+slug: dark-arts
 banner: ./defence-against-the-dark-arts.jpg
 ---
 
