remember to quote frontmatter fields

--- a/gatsby-minimal-zenlify-starter/content/posts/fantastic-beasts-and-where-to-find-them/index.mdx
+++ b/gatsby-minimal-zenlify-starter/content/posts/fantastic-beasts-and-where-to-find-them/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: MDX examples: Fantastic Beasts and Where to Find Them
+title: "MDX examples: Fantastic Beasts and Where to Find Them"
 date: 2019-11-01
 tags:
   - Novel
