--- a/gatsby-minimal-zenlify-starter/content/posts/new-draft-snickers-baby-hf8ve/index.mdx
+++ b/gatsby-minimal-zenlify-starter/content/posts/new-draft-snickers-baby-hf8ve/index.mdx
@@ -20,5 +20,5 @@ He laughed. "That's against the law!"
 
 "Oh. Of course."
 
-"It's fine work. Monday bum Millay, Wednesday Whitman, Friday Faulkner, burn 'em to ashes, then bum the ashes. That's our official slogan."
+"It's fine work. Monday bum Millay, Wednesday Whitman, Friday Faulkner, burn 'em to ashes, then burn the ashes. That's our official slogan."
 
