--- a/gatsby-minimal-zenlify-starter/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/gatsby-minimal-zenlify-starter/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,4 +2,4 @@
   Hi.
 </Text>
 
-I'm [Gatsby-Zenlify](https://github.com/tacogator/gatsby-themes) - a plugin that makes it easier to blog and publish from your Gatsby git repo.  
+I'm [Gatsby-Zenlify]() - a plugin that makes it easier to write markdown blog and publish from your Gatsby git repo.  
