--- a/gatsby-minimal-zenlify-starter/content/posts/new-draft-snickers-baby-hf8ve/index.mdx
+++ b/gatsby-minimal-zenlify-starter/content/posts/new-draft-snickers-baby-hf8ve/index.mdx
@@ -4,6 +4,8 @@ description: "It was a pleasure to burn.It was a special pleasure to see things 
 slug: "/the-hearth-and-the-salamander"
 date: 2020-04-16T14:23:04.223Z
 ---
+> "It's fine work. Monday bum Millay, Wednesday Whitman, Friday Faulkner, burn 'em to ashes, then burn the ashes. That's our official slogan."
+
 "So many people are. Afraid of firemen, I mean. But you're just a man, after all…"
 
 He saw himself in her eyes, suspended in two shining drops of bright water, himself dark and tiny, in fine detail, the lines about his mouth, everything there, as if her eyes were two miraculous bits of violet amber that might capture and hold him intact. Her face, turned to him now, was fragile milk crystal with a soft and constant light in it. It was not the hysterical light of electricity but-what? But the strangely comfortable and rare and gently flattering light of the candle. One time, when he was a child, in a power-failure, his mother had found and lit a last candle and there had been a brief hour of rediscovery, of such illumination that space lost its vast dimensions and drew comfortably around them, and they, mother and son, alone, transformed, hoping that the power might not come on again too soon…
