update icons and add metadata to dashboard

--- a/gatsby-minimal-zenlify-starter/content/pages/about/index.mdx
+++ b/gatsby-minimal-zenlify-starter/content/pages/about/index.mdx
@@ -3,8 +3,6 @@ title: About
 slug: "/about"
 ---
 
-Hi!
+Ray Douglas Bradbury (August 22, 1920 – June 5, 2012) was an American author and screenwriter. He worked in a variety of genres, including fantasy, science fiction, horror, and mystery fiction.
 
-Remus Lupin - also known as Moony - is currently teaching "Defense against the Dark Arts" at Hogwarts. He was afflicted with lycanthropy during his childhood, as a result of Fenrir Greyback's revenge against Lyall. He attended Hogwarts School of Witchcraft and Wizardry from 1971-1978 and was Sorted into Gryffindor House. During his school years he was one of the Marauders, best friends with Sirius Black, James Potter, and Peter Pettigrew. Together they created the Marauder's Map.
-
-He fought against Death Eaters once more in the Second Wizarding War, during which he lost his friend Sirius. In 1997, Remus married fellow Order member Nymphadora Tonks and had a son, Edward Remus Lupin, of whom he named Harry the godfather. Remus fought at the Battle of Hogwarts on 2 May, 1998, during which his wife was murdered by Bellatrix Lestrange. Remus was also murdered by Death Eater, Antonin Dolohov, during the first half of the same battle. His death was avenged by Filius Flitwick.
+Predominantly known for writing the iconic dystopian novel Fahrenheit 451 (1953), and his science-fiction and horror-story collections, The Martian Chronicles (1950), The Illustrated Man (1951), and I Sing the Body Electric (1969), Bradbury was one of the most celebrated 20th- and 21st-century American writers.[2] While most of his best known work is in fantasy fiction, he also wrote in other genres, such as the coming-of-age novel Dandelion Wine (1957) and the fictionalized memoir Green Shadows, White Whale (1992).
