--- a/gatsby-minimal-zenlify-starter/content/posts/new-draft-cleo-lucy-mkrit/index.mdx
+++ b/gatsby-minimal-zenlify-starter/content/posts/new-draft-cleo-lucy-mkrit/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Hipsum: Cred flexitarian salvia, pop-up readymade fingerstache whatever chillwave sustainable lo-fi"
-description: "null"
+description: ""
 slug: "new-draft-cleo-lucy-mkrit"
 date: 2020-04-16T14:08:53.887Z
 ---
