material-ui not working as expected in build mode

--- a/gatsby-minimal-zenlify-starter/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/gatsby-minimal-zenlify-starter/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,4 +2,4 @@
   Hi.
 </Text>
 
-I'm [Gatsby-Zenlify]() - a plugin that makes it fun to write markdown blog and publish from your Gatsby git repo.  
+I'm [Gatsby-Zenlify]() - a plugin that makes it fun to write markdown and publish blog from your Gatsby git repo.  
