added UI wireframe component and Gataby MUI plugin

--- a/tacogator/content/posts/appbar/index.mdx
+++ b/tacogator/content/posts/appbar/index.mdx
@@ -1,21 +1,23 @@
 ---
-title: Responsive menu bar
+title: Responsive nav bar
 date: 2020-04-19
 tags:
+- bear-essentials
 - material-ui
 - navbar
 - responsive
 ---
 
-Out of the box material-ui doesn't provide a responsive top-level menubar.  Fortunately, the library comes equipped with all the primative building blocks to make one yourself.  
+Out of the box material-ui doesn't provide a responsive nav bar.  Fortunately, you can easily build one yourself from material-ui's primitive building blocks - `AppBar` and `Hidden`.
 
 ### Desktop
+Logo on the left and navbar on the right
+
 <DesktopBasicEx />
 
 ### Mobile
+Navbar collapsed into dropdown menu.  Optional Call-to-action remained.
 <MobileBasicEx />
 
 ### Live code playground
-
-Resize your browser to see changes
 <AppBarMobile/>
