--- a/tacogator/content/posts/dialogs/index.mdx
+++ b/tacogator/content/posts/dialogs/index.mdx
@@ -1,11 +1,14 @@
 ---
-title: Dialogs
+title: Dialog
 date: 2020-04-15
 tags:
+- bear-essentials
 - material-ui
 - dialog
 ---
 Material-ui Dialog can get a little verbose just to create a typical dialog with a Close button in the upper right corner.  When you need more than one dialogs, consider building a wrapper component to hide unneccessary details.
+
+<DialogSkeleton />
 
 ### Basic dialog
 <DialogSimple/>
