[WIP] layout and formatting

--- a/gatsby-material-blog/content/posts/hipster-ipsum-tofu/index.mdx
+++ b/gatsby-material-blog/content/posts/hipster-ipsum-tofu/index.mdx
@@ -1,14 +1,18 @@
 ---
-title: "Freegan fingerstache craft beer"
-date: 2020-04-08
+title: "Commodo sriracha voluptate"
+date: 2020-04-20
 tags:
-- craf beer
+- shaman
 - tofu
 - flannel
 - sriracha
-banner: "./vinyl-jace-afsoon.jpeg"
+banner: "./harshal-s-hirve.jpg"
 ---
-I'm baby migas aute mustache retro chia tousled woke chambray hell of. Yuccie fixie keytar occupy, everyday carry pickled 3 wolf moon. Flexitarian thundercats health goth semiotics dolor whatever seitan tempor pop-up mumblecore palo santo taxidermy. Sriracha man bun heirloom XOXO. Hell of af pinterest tempor 3 wolf moon. Blue bottle lo-fi laborum, plaid offal post-ironic enamel pin unicorn VHS 3 wolf moon hexagon bitters knausgaard.
+I'm baby migas aute mustache retro chia tousled woke chambray hell of. Yuccie fixie keytar occupy, everyday carry pickled 3 wolf moon. Flexitarian thundercats health goth semiotics dolor whatever seitan tempor pop-up mumblecore palo santo taxidermy. 
+
+## Sriracha man bun heirloom XOXO
+
+Hell of af pinterest tempor 3 wolf moon. Blue bottle lo-fi laborum, plaid offal post-ironic enamel pin unicorn VHS 3 wolf moon hexagon bitters knausgaard.
 
 Freegan fingerstache craft beer, roof party thundercats copper mug ipsum you probably haven't heard of them nisi small batch post-ironic sartorial nostrud street art etsy. Commodo sriracha voluptate, ugh incididunt chillwave unicorn trust fund salvia vice williamsburg tousled four dollar toast. Nostrud hashtag quinoa irony. 
 
