--- a/gatsby-material-blog/content/posts/cupcakes/index.mdx
+++ b/gatsby-material-blog/content/posts/cupcakes/index.mdx
@@ -1,10 +1,9 @@
 ---
-title: "Lollipop lemon drops topping carrot cake"
+title: "LOLLIPOP LEMON DROPS topping carrot cake"
 date: 2020-04-09
 tags:
-- cupcake
-- cheesecake
-- macaroon
+- retro
+banner: "./namroud-gorguis-unsplash.jpg"
 ---
 Cupcake ipsum dolor sit amet pudding soufflé halvah cupcake. Macaroon halvah jelly-o biscuit. Carrot cake cotton candy dessert cake soufflé marzipan pie biscuit. Cake pie powder oat cake. Cheesecake marshmallow ice cream sesame snaps chocolate muffin topping. Apple pie icing bonbon oat cake. Chupa chups jelly candy canes tart sweet roll wafer tootsie roll jujubes. Gummi bears chocolate liquorice.
 
