--- a/gatsby-material-blog/content/posts/test-post/index.mdx
+++ b/gatsby-material-blog/content/posts/test-post/index.mdx
@@ -1,5 +1,8 @@
 ---
 title: "This is a blog post"
 date: 2020-04-07
+tags:
+- retro
+banner: "./giacomo-buzzao-unsplash.jpg"
 ---
 hello this is a test
