[WIP] hero section

--- a/gatsby-material-blog/content/posts/hipster-ipsum-2/index.mdx
+++ b/gatsby-material-blog/content/posts/hipster-ipsum-2/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Shabby chic lumbersexual hell of YOLO"
-date: 2020-04-11
+title: "Shabby chic lumbersexual hell of YOLO chillwave fixie paleo before they sold out"
+date: 2020-05-01
 tags:
 - craf beer
 - tofu
