--- a/gatsby-material-blog/content/posts/more-cupcakes/index.mdx
+++ b/gatsby-material-blog/content/posts/more-cupcakes/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Cupcake ipsum dolor sit amet"
-date: 2020-04-15
+title: "Cupcake ipsum dolor sit amet Icing gummies sugar plum chocolate"
+date: 2020-04-28
 tags:
 - cupcake
 - cheesecake
