--- a/gatsby-material-blog/content/posts/hipster-ipsum-tofu/index.mdx
+++ b/gatsby-material-blog/content/posts/hipster-ipsum-tofu/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Commodo sriracha voluptate"
-date: 2020-04-20
+date: 2020-05-04
 tags:
 - shaman
 - tofu
 - flannel
 - sriracha
-banner: "./harshal-s-hirve.jpg"
+banner: "./davide-ragusa-unsplash.jpg"
 ---
 I'm baby migas aute mustache retro chia tousled woke chambray hell of. Yuccie fixie keytar occupy, everyday carry pickled 3 wolf moon. Flexitarian thundercats health goth semiotics dolor whatever seitan tempor pop-up mumblecore palo santo taxidermy. 
 
