--- a/gatsby-starter-material-clarisse-blog/content/pages/about/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/pages/about/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: "About this Gatsby theme"
+title: "About this blog"
 slug: "/about"
 ---
-**Clarisse** theme fuses together written words and photography.  Suitable for long-form content, travel blog, recipes or general personal site.
+This site is built with Gatsby theme "Clarrise" a *minimal blogging theme for writers*.  Suitable for long-form content, travel blog or personal site.
 
 ![header image](./george-alexandru-novac-unsplash.jpg)
 Photo by GEORGE ALEXANDRU NOVAC on [Unsplash](https://unsplash.com/@georgenovac)
