tidy up sample content

--- a/gatsby-starter-material-clarisse-blog/content/pages/about/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/pages/about/index.mdx
@@ -2,24 +2,28 @@
 title: "About this blog"
 slug: "/about"
 ---
-This site is built with Gatsby theme "Clarrise" a *minimal blogging theme for writers*.  Suitable for long-form content, travel blog or personal site.
+This site is built with Gatsby theme "Clarrise" — a *minimal blogging theme* for writers — suitable for long-form content, travel blog or personal site.
+
+New to GatsbyJS?  Visit [gatsbyjs.org](https://www.gatsbyjs.org) to learn more.
 
 ![header image](./george-alexandru-novac-unsplash.jpg)
 Photo by GEORGE ALEXANDRU NOVAC on [Unsplash](https://unsplash.com/@georgenovac)
 
+
 ## How to use this theme
 
-If starting a new blog from scratch 
-```
-gatsby create my-travel-blog https://sldldsldl
-```
-
-You can also add the theme to existing gatsby project
+Create a new blog from scratch:
 
 ```
-yarn add @tacogator/gatsby-theme-clarrise-starter
+gatsby mew my-travel-blog https://github.com/tacogator/gatsby-themes/gatsby-starter-material-clarisse-blog
+```
+
+You can also add the theme to existing gatsby project:
+
+```
+yarn add @tacogator/gatsby-theme-material-clarrise
 ```
 
 ## Customization
 
-Visit our github page for detail explanation on metadata and shadowing points.
+Visit our [Github](https://github.com/tacogator/gatsby-themes/gatsby-theme-material-clarisse-blog) page for documentation.
