--- a/gatsby-starter-material-clarisse-blog/content/posts/hipster-ipsum-2/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/posts/hipster-ipsum-2/index.mdx
@@ -2,10 +2,7 @@
 title: "Shabby chic lumbersexual hell of YOLO chillwave fixie paleo before they sold out"
 date: 2020-05-01
 tags:
-- craf beer
-- tofu
-- flannel
-- gentrify
+- food
 banner: "./imattsmart-unsplash.jpg"
 ---
 Shabby chic lumbersexual hell of YOLO, vape hot chicken man braid locavore austin bushwick four loko in readymade shaman copper mug. Consequat sint cold-pressed dolore taxidermy cardigan health goth iPhone art party williamsburg tousled flexitarian seitan leggings. In cillum tumeric succulents letterpress, coloring book anim. Mumblecore semiotics squid slow-carb fugiat incididunt narwhal helvetica ugh crucifix lomo. 8-bit organic quinoa bicycle rights. Kitsch labore put a bird on it tempor, squid ullamco tofu skateboard. Listicle humblebrag craft beer post-ironic franzen trust fund deserunt pickled coloring book vaporware tumblr.
