--- a/gatsby-starter-material-clarisse-blog/content/posts/hipster-ipsum/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/posts/hipster-ipsum/index.mdx
@@ -2,10 +2,8 @@
 title: "Freegan fingerstache craft beer"
 date: 2020-04-08
 tags:
-- craf beer
-- tofu
-- flannel
-- sriracha
+- music
+- travel
 banner: "./vinyl-jace-afsoon.jpeg"
 ---
 I'm baby migas aute mustache retro chia tousled woke chambray hell of. Yuccie fixie keytar occupy, everyday carry pickled 3 wolf moon. Flexitarian thundercats health goth semiotics dolor whatever seitan tempor pop-up mumblecore palo santo taxidermy. Sriracha man bun heirloom XOXO. Hell of af pinterest tempor 3 wolf moon. Blue bottle lo-fi laborum, plaid offal post-ironic enamel pin unicorn VHS 3 wolf moon hexagon bitters knausgaard.
