--- a/gatsby-starter-material-clarisse-blog/content/posts/more-cupcakes/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/posts/more-cupcakes/index.mdx
@@ -2,9 +2,7 @@
 title: "Cupcake ipsum dolor sit amet Icing gummies sugar plum chocolate"
 date: 2020-04-28
 tags:
-- cupcake
-- cheesecake
-- tootsie
+- food
 banner: "./jonathan-pielmayer.jpg"
 ---
 > Cupcake ipsum dolor sit amet. Pudding chocolate cake macaroon fruitcake donut gingerbread. Gummi bears soufflé I love oat cake cake. Powder I love cake sesame snaps cake tart cake soufflé candy canes. Halvah tiramisu apple pie. Powder tiramisu gummies I love marzipan danish jujubes powder pie. Icing sugar plum candy. 
