--- a/gatsby-starter-material-clarisse-blog/content/posts/hipster-ipsum-tofu/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/posts/hipster-ipsum-tofu/index.mdx
@@ -2,10 +2,8 @@
 title: "Commodo sriracha voluptate"
 date: 2020-05-04
 tags:
-- shaman
-- tofu
-- flannel
-- sriracha
+- food
+- travel
 banner: "./davide-ragusa-unsplash.jpg"
 ---
 I'm baby migas aute mustache retro chia tousled woke chambray hell of. Yuccie fixie keytar occupy, everyday carry pickled 3 wolf moon. Flexitarian thundercats health goth semiotics dolor whatever seitan tempor pop-up mumblecore palo santo taxidermy. 
