--- a/gatsby-starter-material-clarisse-blog/content/posts/test-post/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/posts/test-post/index.mdx
@@ -2,7 +2,8 @@
 title: "Do you see any Teletubbies in here?"
 date: 2020-04-07
 tags:
-- retro
+- travel
+- Samuel L. ipsum
 banner: "./giacomo-buzzao-unsplash.jpg"
 ---
 Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it? Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it? No? Well, that's what you see at a toy store. And you must think you're in a toy store, because you're here shopping for an infant named Jeb.
