tidy up before npm publish

--- a/gatsby-starter-material-clarisse-blog/content/pages/about/index.mdx
+++ b/gatsby-starter-material-clarisse-blog/content/pages/about/index.mdx
@@ -15,7 +15,7 @@ Photo by GEORGE ALEXANDRU NOVAC on [Unsplash](https://unsplash.com/@georgenovac)
 Create a new blog from scratch:
 
 ```
-gatsby mew my-travel-blog https://github.com/tacogator/gatsby-themes/gatsby-starter-material-clarisse-blog
+gatsby new my-travel-blog https://github.com/tacogator/gatsby-themes/gatsby-starter-material-clarisse-blog
 ```
 
 You can also add the theme to existing gatsby project:
