center nav and large branding

--- a/gatsby-starter-blog-material-clarisse/content/pages/about/index.mdx
+++ b/gatsby-starter-blog-material-clarisse/content/pages/about/index.mdx
@@ -1,16 +1,16 @@
 ---
-title: "About this blog"
+title: "About This Blog"
 slug: "/about"
 ---
-This site is built with Gatsby theme "Clarrise" — a *minimal blogging theme* for writers — suitable for long-form content, travel blog or personal site.
+This site is built with Gatsby theme "Clarrise" — a *blogging theme* for writers — suitable for long-form content, travel blog or personal site.
 
 New to GatsbyJS?  Visit [gatsbyjs.org](https://www.gatsbyjs.org) to learn more.
 
 ![header image](./george-alexandru-novac-unsplash.jpg)
-Photo by GEORGE ALEXANDRU NOVAC on [Unsplash](https://unsplash.com/@georgenovac)
+*Photo by GEORGE ALEXANDRU NOVAC on [Unsplash](https://unsplash.com/@georgenovac)*
 
 
-## How to use this theme
+## Installation
 
 Create a new blog from scratch:
 
@@ -26,4 +26,4 @@ yarn add @tacogator/gatsby-theme-material-clarrise
 
 ## Customization
 
-Visit our [Github](https://github.com/tacogator/gatsby-themes/gatsby-theme-material-clarisse-blog) page for documentation.
+Visit our [Github](https://github.com/tacogator/gatsby-themes/gatsby-theme-blog-material-clarisse) page for documentation.
