--- a/gatsby-starter-blog-material-clarisse/content/posts/cupcakes/index.mdx
+++ b/gatsby-starter-blog-material-clarisse/content/posts/cupcakes/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "LOLLIPOP LEMON DROPS topping carrot cake"
+title: "LOLLIPOP LEMON DROPS Topping Carrot Cake"
 date: 2020-04-09
 tags:
 - music
