--- a/gatsby-starter-blog-material-clarisse/content/posts/hipster-ipsum-2/index.mdx
+++ b/gatsby-starter-blog-material-clarisse/content/posts/hipster-ipsum-2/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Shabby chic lumbersexual hell of YOLO chillwave fixie paleo before they sold out"
+title: "Shabby Chic Lumbersexual Hell of YOLO Chillwave Fixie Paleo Before They Sold Out"
 date: 2020-05-01
 tags:
 - food
