--- a/gatsby-starter-blog-material-clarisse/content/posts/hipster-ipsum-tofu/index.mdx
+++ b/gatsby-starter-blog-material-clarisse/content/posts/hipster-ipsum-tofu/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Commodo sriracha voluptate"
+title: "Roof Party Thundercats Copper Mug Ipsum You Probably Haven't Heard Of Them"
 date: 2020-05-04
 tags:
 - food
