--- a/gatsby-starter-blog-material-clarisse/content/posts/more-cupcakes/index.mdx
+++ b/gatsby-starter-blog-material-clarisse/content/posts/more-cupcakes/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Cupcake ipsum dolor sit amet Icing gummies sugar plum chocolate"
+title: "Cupcake Ipsum Dolor Sit amet Icing Gummies Sugar Plum Chocolate"
 date: 2020-04-28
 tags:
 - food
