--- a/gatsby-starter-blog-material-clarisse/content/pages/about/index.mdx
+++ b/gatsby-starter-blog-material-clarisse/content/pages/about/index.mdx
@@ -2,9 +2,7 @@
 title: "About This Blog"
 slug: "/about"
 ---
-This site is built with Gatsby theme "Clarrise" — a *blogging theme* for writers — suitable for long-form content, travel blog or personal site.
-
-New to GatsbyJS?  Visit [gatsbyjs.org](https://www.gatsbyjs.org) to learn more.
+This site is built with Gatsby theme "Clarrise" — a *minimalist blog theme* for writers — suitable for long-form content, travel blog or personal site.
 
 ![header image](./george-alexandru-novac-unsplash.jpg)
 *Photo by GEORGE ALEXANDRU NOVAC on [Unsplash](https://unsplash.com/@georgenovac)*
@@ -18,12 +16,12 @@ Create a new blog from scratch:
 gatsby new my-travel-blog https://github.com/tacogator/gatsby-themes/gatsby-starter-material-clarisse-blog
 ```
 
-You can also add the theme to existing gatsby project:
+You can also add the theme to existing Gatsby project:
 
 ```
-yarn add @tacogator/gatsby-theme-material-clarrise
+yarn add @tacogator/gatsby-theme-blog-material-clarrise
 ```
 
 ## Customization
 
-Visit our [Github](https://github.com/tacogator/gatsby-themes/gatsby-theme-blog-material-clarisse) page for documentation.
+Visit our [Github](https://github.com/tacogator/gatsby-themes/tree/master/gatsby-theme-blog-material-clarisse) page for documentation.
