publishing as scoped

--- a/gatsby-starter-blog-material-clarisse/content/pages/about/index.mdx
+++ b/gatsby-starter-blog-material-clarisse/content/pages/about/index.mdx
@@ -13,7 +13,8 @@ This site is built with Gatsby theme "Clarrise" — a *minimalist blog theme* fo
 Create a new blog from scratch:
 
 ```
-gatsby new my-travel-blog https://github.com/tacogator/gatsby-themes/gatsby-starter-material-clarisse-blog
+yarn add @tacogator/gatsby-starter-blog-material-clarisse
+gatsby new my-travel-blog @tacogator/gatsby-starter-blog-material-clarisse
 ```
 
 You can also add the theme to existing Gatsby project:
